# drawing-reconstructor

./: .gitignore  README.md  README_zh.md  pyproject.toml
demo/: run_demo.py
src/drawing_reconstructor/: __init__.py  blender.py  feature_matcher.py  homography_estimator.py  match_graph.py  models.py  reconstructor.py  tile_loader.py
tests/: test_match_graph.py  test_reconstructor.py
